--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "keymirror": "^0.1.1"
   },
   "devDependencies": {
+    "babel": "^5.4.7",
     "chai": "^2.3.0",
     "mocha": "^2.2.5"
   }
