--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "del": "^1.2.0",
     "gulp": "^3.9.0",
     "gulp-babel": "^5.1.0",
+    "gulp-mocha": "^2.1.0",
     "mocha": "^2.2.5",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0"
