--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A minimal Flux based framework",
   "main": "index.js",
   "scripts": {
-    "test": "mocha"
+    "test": "gulp test"
   },
   "keywords": [
     "flux",
