Update package.json to include github repo info.

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-native"
   ],
   "author": "John Huynh <john@huynh.io>",
+  "repository": "jnhuynh/min-flux",
   "license": "MIT",
   "dependencies": {
     "events": "^1.0.2",
